--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <title>APEXSO | Homepage</title>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.0-beta/css/bootstrap-select.min.css" rel="stylesheet" />
 <!-- owl-scroller CSS -->
 <link rel="stylesheet" href="css/owl.carousel.min.css">
  <!-- Font Awesome css -->
@@ -70,7 +71,7 @@
 		        <a class="nav-link" href="#">BLOG</a>
 		      </li>
 		      <li class="nav-item navBtn">
-		        <a class="nav-link" href="#">CONTACT US</a>
+		        <a class="nav-link" data-toggle="modal" data-target="#contactPop">CONTACT US</a>
 		      </li>
 		      <li class="nav-item dropmenu">
 		        <a class="nav-link" href="#"><img src="images/language.png" alt="" /></i></a>
@@ -467,14 +468,85 @@
 			<p class="mb-0 copyright">© 2024 ALL RIGHTS RESERVED</p>
 		</div>
 	</footer>
+	<div class="modal fade" id="contactPop" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+		  <div class="modal-content">
+			<div class="modal-header">
+			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			  </button>
+			</div>
+			<div class="modal-body contactUs">
+				<div class="container">
+					<h2>Contact us</h2>
+					<div class="row">
+						<div class="col-md-6 col-12">
+							<div class="contactTile">
+								<div class="tileBx">
+									<img src="images/msg.png" alt="" />
+									<p class="m-0"><a href="mailto:apexso@898.com">apexso@898.com</a></p>
+								</div>
+								<div class="tileBx">
+									<img src="images/call.png" alt="" />
+									<p class="m-0"><a href="callto:+77997977979">+77997977979</a></p>
+								</div>
+								<div class="tileBx">
+									<img src="images/link.png" alt="" />
+									<p class="m-0"><a href="#">Linkedin</a></p>
+								</div>
+								<div class="tileBx">
+									<img src="images/call.png" alt="" />
+									<p class="m-0"><a href="#">Book a meeting</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 col-12">
+							<div class="contactBx">
+								<h3>Interested but don’t<br>
+									know where to start?</h3>
+								<div class="form-group">
+									<input type="text" name="" id="" class="form-control" placeholder="Full Name*"/>
+								</div>
+								<div class="form-group">
+									<input type="email" name="" id="" class="form-control" placeholder="Email*"/>
+								</div>
+								<div class="form-group multipleInput">
+									<select id="mySelect" data-show-content="true" class="form-control">
+										<option data-content="<img src='images/globe.png'/>"></option>
+										<option data-content="+91"></option>
+										<option data-content="+92"></option>
+									</select>
+									<input type="text" name="" id="" class="form-control" placeholder="Phone"/>
+								</div>
+								<div class="form-group">
+									<input type="text" name="" id="" class="form-control" placeholder="Subject*"/>
+								</div>
+								<div class="form-group">
+									<textarea name="" id="" class="form-control" placeholder="Your message*" rows="4"></textarea>
+								</div>
+								<div class="form-group">
+									<button class="colorBtn fullWidth justify-content-center">Send Message</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		  </div>
+		</div>
+	  </div>
 
 <!-- jQuery -->
 <script src="js/jquery.min.js"></script>
 <!-- Bootstrap JS -->
-<script src="js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 <!-- Scroll-effect JS -->
 <script src="js/local.js"></script>
 <script src="js/owl.carousel.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.0-beta/js/bootstrap-select.min.js"></script>
+<script>
+    $('#mySelect').selectpicker();
+</script>
 </body>
 
 </html>
