footer update as per new design

--- a/index.html
+++ b/index.html
@@ -430,18 +430,22 @@
 			<div class="footerWrp">
 				<div class="footerLogo">
 					<img src="images/logo.png" alt="" />
-					<P class="para">
+					<P class="para mt-3">
 						The agency desired a more future-proof alternative to<br>boost collaboration, productivity, and security.
 					</P>
-					<h3>Contact:</h3>
-					<h4 class="mb-4"><a href="mailto:contact@apexso.com">contact@apexso.com</a></h4>
-					<h3>Follow us on:</h3>
-					<div class="d-flex">
-						<a href="#"><i class="fab fa-instagram"></i></a>
-						<a href="#"><i class="fab fa-facebook"></i></a>
-						<a href="#"><i class="fab fa-linkedin"></i></a>
-						<a href="#"><img src="images/mage_x.png" alt="" /></a>
+					<div class="footerLinkBx mt-5">
+						<h3>Registered Offices</h3>
+						<ul class="unorderList">
+							<li><a href="#"><b>England:</b> 124 City Road, London EC1V 2NX</a></li>
+							<li><a href="#"><b>Germany:</b>Arnsberg, Germany</a></li>
+							<li><a href="#"><b>France:</b>90 Rue Raynouard 75016 Paris</a></li>
+							<li><a href="#"><b>Netherlands:</b>The Hague, Netherlands</a></li>
+							<li><a href="#"><b>India:</b>Bhive Platinum, No.271, 6th Main Road, <br>
+								HAL 2nd Stage , Indiranagar, Bangalore</a></li>
+						</ul>
 					</div>
+					
+					
 				</div>
 				<div class="footerLink">
 					<div class="footerLinkBx">
@@ -452,6 +456,8 @@
 							<li><a href="#">Products</a></li>
 							<li><a href="#">Our Blogs</a></li>
 						</ul>
+						<h3 class="mt-5">Contact:</h3>
+						<h4 class="mb-4"><a href="mailto:contact@apexso.com">contact@apexso.com</a></h4>
 					</div>
 					<div class="footerLinkBx">
 						<h3>SUPPORT</h3>
@@ -460,6 +466,13 @@
 							<li><a href="#">Copyright statement</a></li>
 							<li><a href="#">Terms & conditions</a></li>
 						</ul>
+						<h3 class="mt-5">Follow us on:</h3>
+						<div class="d-flex">
+							<a href="#"><i class="fab fa-instagram"></i></a>
+							<a href="#"><i class="fab fa-facebook"></i></a>
+							<a href="#"><i class="fab fa-linkedin"></i></a>
+							<a href="#"><img src="images/mage_x.png" alt="" /></a>
+						</div>
 					</div>
 				</div>
 			</div>
