changes for privacy and term pages

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 		        <a class="nav-link" href="#"><b>Home</b></a>
 		      </li>
 		      <li class="nav-item dropmenu">
-		        <a class="nav-link" href="#">Services </a>
-		        <i class="fas fa-angle-down dropmenuToggle"></i>
+		        <a class="nav-link" href="#servicesSec">Services </a>
+		        <!-- <i class="fas fa-angle-down dropmenuToggle"></i>
 		        <div class="dropmenuWrp">
 		        	<ul class="unorderList">
 		        		<li><a href="#">Dropmenu 1</a></li>
@@ -52,11 +52,11 @@
 		        		<li><a href="#">Dropmenu 4</a></li>
 		        		<li><a href="#">Dropmenu 5</a></li>
 		        	</ul>
-		        </div>
+		        </div> -->
 		      </li>
 		      <li class="nav-item dropmenu">
-		        <a class="nav-link" href="#">PRODUCTS</i></a>
-		        <i class="fas fa-angle-down dropmenuToggle"></i>
+		        <a class="nav-link" href="#servicesSec">PRODUCTS</i></a>
+		        <!-- <i class="fas fa-angle-down dropmenuToggle"></i>
 		        <div class="dropmenuWrp">
 		        	<ul class="unorderList">
 		        		<li><a href="#">Dropmenu 1</a></li>
@@ -65,17 +65,17 @@
 		        		<li><a href="#">Dropmenu 4</a></li>
 		        		<li><a href="#">Dropmenu 5</a></li>
 		        	</ul>
-		        </div>
+		        </div> -->
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">BLOG</a>
+		        <a class="nav-link" href="#blogSec">BLOG</a>
 		      </li>
 		      <li class="nav-item navBtn">
 		        <a class="nav-link" data-toggle="modal" data-target="#contactPop">CONTACT US</a>
 		      </li>
 		      <li class="nav-item dropmenu">
 		        <a class="nav-link" href="#"><img src="images/language.png" alt="" /></i></a>
-		        <i class="fas fa-angle-down dropmenuToggle"></i>
+		        <!-- <i class="fas fa-angle-down dropmenuToggle"></i>
 		        <div class="dropmenuWrp">
 		        	<ul class="unorderList">
 		        		<li><a href="#">Dropmenu 1</a></li>
@@ -84,7 +84,7 @@
 		        		<li><a href="#">Dropmenu 4</a></li>
 		        		<li><a href="#">Dropmenu 5</a></li>
 		        	</ul>
-		        </div>
+		        </div> -->
 		      </li>
 		    </ul>
 		  </div>
@@ -127,7 +127,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="explore">
+	<section class="explore" id="servicesSec">
 		<div class="container">
 			<div class="row align-items-center mb-3">
 				<div class="col-md-6 col-12">
@@ -137,7 +137,7 @@
 					</div>
 				</div>
 				<div class="col-md-6 col-12">
-					<p class="m-0 para">Infotechtion was founded by leading Information Governance experts with a
+					<p class="m-0 para">Apexso was founded by leading Information Governance experts with a
 						vision to modernize information management activities and create value from
 						information. Fast forward to today the company has grown into one of the
 						leading solutions and consulting firms pioneering the application of
@@ -184,7 +184,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="caseStudy">
+	<!-- <section class="caseStudy">
 		<div class="container">
 			<div class="d-flex justify-content-between align-items-center">
 				<div class="sectionHeading">
@@ -240,7 +240,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<section class="whyUs">
 		<div class="container">
 			<div class="sectionHeading">
@@ -304,7 +304,7 @@
 					</div>
 				</div>
 				<div class="col-md-6 col-12">
-					<p class="m-0 para">Infotechtion was founded by leading Information Governance experts with a
+					<p class="m-0 para">Apexso was founded by leading Information Governance experts with a
 						vision to modernize information management activities and create value from
 						information. Fast forward to today the company has grown into one of the
 						leading solutions and consulting firms pioneering the application of
@@ -395,7 +395,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="blog">
+	<section class="blog" id="blogSec">
 		<div class="container">
 			<div class="d-flex justify-content-between align-items-center">
 				<div class="sectionHeading">
@@ -452,25 +452,25 @@
 						<h3>SITEMAP</h3>
 						<ul class="unorderList">
 							<li><a href="#">Home</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="#">Products</a></li>
-							<li><a href="#">Our Blogs</a></li>
+							<li><a href="#servicesSec">Services</a></li>
+							<li><a href="#servicesSec">Products</a></li>
+							<li><a href="#blogSec">Our Blogs</a></li>
 						</ul>
 						<h3 class="mt-5">Contact:</h3>
-						<h4 class="mb-4"><a href="mailto:contact@apexso.com">contact@apexso.com</a></h4>
+						<h4 class="mb-4"><a href="mailto:business.apexso@gmail.com">business.apexso@gmail.com</a></h4>
 					</div>
 					<div class="footerLinkBx">
 						<h3>SUPPORT</h3>
 						<ul class="unorderList">
-							<li><a href="#">Privacy policy</a></li>
+							<li><a href="privacy.html">Privacy policy</a></li>
 							<li><a href="#">Copyright statement</a></li>
-							<li><a href="#">Terms & conditions</a></li>
+							<li><a href="term-and-condition.html">Terms & conditions</a></li>
 						</ul>
 						<h3 class="mt-5">Follow us on:</h3>
 						<div class="d-flex">
 							<a href="#"><i class="fab fa-instagram"></i></a>
 							<a href="#"><i class="fab fa-facebook"></i></a>
-							<a href="#"><i class="fab fa-linkedin"></i></a>
+							<a href="https://www.linkedin.com/company/apexsotechnologies/" target="_blank"><i class="fab fa-linkedin"></i></a>
 							<a href="#"><img src="images/mage_x.png" alt="" /></a>
 						</div>
 					</div>
